--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -305,7 +305,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
 
         <meta-data
             android:name="io.fabric.ApiKey"
@@ -381,7 +381,15 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".n.view.panorama.PanoramaAlbumActivity" />
+        <activity android:name=".n.view.panorama.PanoramaAlbumActivity">
+
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <service android:name=".n.engine.DataSourceService"></service>
     </application>
 
