--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- 允许程序挂载和移除可移动存储设备 -->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <!--用于密码修改后其他终端提示-->
+    <!-- 用于密码修改后其他终端提示 -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <uses-feature
@@ -384,22 +384,29 @@
             android:exported="true">
             <intent-filter android:priority="1000">
 
+
                 　
+
+
                 <!-- 监听的动作类型，这里是监听网络连接的状态 -->
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
 
         <activity android:name=".n.view.panorama.PanoramaAlbumActivity">
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".n.engine.DataSourceService"></service>
+
+        <service android:name=".n.engine.DataSourceService" />
+
+        <activity
+            android:name=".n.view.activity.BindCamActivity"
+            android:label="@string/title_activity_bind_cam"
+            android:theme="@style/CamActivityTheme" />
     </application>
 
 </manifest>
