--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,6 +167,10 @@ repositories {
     }
 }
 
+greendao {
+    schemaVersion 2
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //这种方式可以解决:Warning:Conflict with dependency 'com.google.guava:guava'. Resolved versions for app (18.0) and test app (19.0) differ. See http://g.co/androidstudio/app-test-app-conflict for details.
