--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,6 @@ ext {
     leakcanaryAndroid = 'com.squareup.leakcanary:leakcanary-android:1.5'
     leakcanaryAndroidNoOp = 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     leakcanaryAndroidNoOp = 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    cySdk = 'JFGLibrary-release'
+    cySdk = 'JfgAndroidSDK-3.0.185'
     facebookSDK = 'facebook-android-sdk-4.19.0'
 }
