解决 datasoumanager 获取 device 为 null 导致异常

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,13 @@ def boolean hasSignKey() {
     return false
 }
 
-task findBugs(type: Exec, dependsOn: preBuild) {
+task findBugs(type: Exec) {
     println 'FindBugs 正在执行代码分析'
     commandLine 'java', '-jar', './libs/findbugs.jar'
     println execResult
 }
+
+
 
 android {
     compileOptions {
