--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -260,6 +260,7 @@
 
         <activity
             android:name=".n.view.misc.UpdateActivity"
+            android:launchMode="singleTask"
             android:theme="@style/dialog_activity_style" />
 
         <service
