--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -269,7 +269,7 @@
             android:exported="true" />
 
         <activity
-            android:name="com.sina.weibo.sdk.component.WeiboSdkBrowser"
+            android:name="com.sina.weibo.sdk.fragmentComponent.WeiboSdkBrowser"
             android:configChanges="keyboardHidden|orientation"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
