修改test1平台的微信AppKey

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,7 +151,7 @@ android {
                                     "VKEY"               : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
                                     "qqAppKey"           : "\\ 1106028314",
                                     "mtaAppKey"          : "Aqc1103156296",
-                                    "weChatAppKey"       : "wx7b9d35f344db8841",
+                                    "weChatAppKey"       : "wx1b350d7d8d8920ed",
                                     "sinaAppKey"         : "\\ 1315129656",
                                     "SERVER"             : "test1.jfgou.com:443"]
         }
