--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'org.greenrobot.greendao'
-//apply plugin: 'android-aspectjx'
 
 //apply plugin: 'io.fabric'
 
@@ -298,6 +297,17 @@ dependencies {
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
     compile 'com.cylan.ext:annotations:0.1.0'
+    //    compile 'com.cylan.iot.sdk:sdkLib:212'
+    fileTree(dir: 'libs', include: '**/*.aar')
+            .each { File file ->
+        dependencies.add("compile", [
+                name: file.name.lastIndexOf('.').with {
+                    it != -1 ? file.name[0..<it] : file.name
+                },
+                ext : 'aar'
+        ])
+    }
+    //谷歌推送
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
@@ -307,13 +317,15 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'org.greenrobot:greendao:3.2.0'
     compile 'com.google.dagger:dagger:2.10'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.jakewharton.rxbinding:rxbinding:1.0.1'
     compile 'com.jakewharton.rxbinding:rxbinding-support-v4:1.0.1'
     compile 'com.jakewharton.rxbinding:rxbinding-recyclerview-v7:1.0.1'
     compile 'com.jakewharton.rxbinding:rxbinding-design:1.0.1'
     compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:1.0.1'
-    compile 'com.cylan.iot.sdk:sdkLib:212'
+    compile 'com.google.android.gms:play-services-gcm:10.2.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 }
 
+//谷歌推送
+apply plugin: 'com.google.gms.google-services'
