--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ buildscript {
 //        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:1.0.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        //谷歌推送
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
